package backend.items;

/**
 * Enam with all the possible entity details
 */
public enum ItemData {
    ID,
    NAME,
    DESCRIPTION,
    QUANTITY,
    SUPPLIER,
    SUPPLIER_ID,
    SUPPLIER_PRICE,
    CUSTOMER_PRICE,
}
